kubernetes/apps/default/misc-ingress/app/ingress-external-ssl-www.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: wordpress.png
    gethomepage.dev/name: Wordpress
    gethomepage.dev/group: Web
    gethomepage.dev/description: Personal Website
spec:
  ingressClassName: external
  rules:
    - host: &host "www.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www
                port:
                  number: 442
    - host: &host "family.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www
                port:
                  number: 442
    - host: &host "payback.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www
                port:
                  number: 442
    - host: &host "code.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www
                port:
                  number: 442
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: www
subsets:
  - addresses:
      - ip: "${SECRET_UNRAID_IP}"
    ports:
      - name: https
        port: 442
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: www
spec:
  ports:
    - name: https
      port: 442
  type: ClusterIP
